Remove Guides/Cryptonews/Recommended sections from homepage

--- a/hugo.toml
+++ b/hugo.toml
@@ -4,6 +4,10 @@ theme = 'parsa'
 defaultContentLanguage = 'en'
 defaultContentLanguageInSubdir = true
 
+[outputs]
+  home = ["HTML", "RSS", "JSON"]
+
+
 [languages]
   [languages.en]
     languageName = 'English'
