--- a/hugo.toml
+++ b/hugo.toml
@@ -28,6 +28,7 @@ defaultContentLanguageInSubdir = true
 [params]
   description = "Fluxio - Modern Tech News"
   author = "Fluxio Team"
+  layout = "2"
   # Custom CSS for Glassmorphism
   custom_css = ["css/custom.css"]
   
