Add comprehensive header, footer, and blog article styling with glass morphism design
Introduce extensive CSS for modern glass-effect UI components including sticky header with glass navigation, redesigned footer with glass container and social links, and enhanced blog article layout with improved typography and code block styling. Update README with sitemap and robots.txt configuration details for search engine optimization.

--- a/hugo.toml
+++ b/hugo.toml
@@ -5,7 +5,7 @@ defaultContentLanguage = 'en'
 defaultContentLanguageInSubdir = true
 
 [outputs]
-  home = ["HTML", "RSS", "JSON"]
+  home = ["HTML", "RSS", "JSON", "SITEMAP", "ROBOTS"]
 
 
 [languages]
@@ -24,6 +24,11 @@ defaultContentLanguageInSubdir = true
 
 [markup.goldmark.renderer]
   unsafe = true
+
+[sitemap]
+  changefreq = "daily"
+  priority = 0.7
+  filename = "sitemap.xml"
 
 [params]
   description = "Fluxio - Modern Tech News"
