--- a/hugo.toml
+++ b/hugo.toml
@@ -25,6 +25,21 @@ defaultContentLanguageInSubdir = true
 [markup.goldmark.renderer]
   unsafe = true
 
+[markup.highlight]
+  anchorLineNos = false
+  codeFences = true
+  guessSyntax = false
+  hl_Lines = ''
+  hl_inline = false
+  lineAnchors = ''
+  lineNoStart = 1
+  lineNos = false
+  lineNumbersInTable = false
+  noClasses = true
+  noHl = false
+  style = 'github'
+  tabWidth = 4
+
 [sitemap]
   changefreq = "daily"
   priority = 0.7
