feat: Add comprehensive Ethereum Shanghai upgrade analysis and update various news posts, layouts, and site configurations.

--- a/hugo.toml
+++ b/hugo.toml
@@ -40,6 +40,10 @@ defaultContentLanguageInSubdir = true
   style = 'github'
   tabWidth = 4
 
+[services]
+  [services.youtube]
+    privacyEnhanced = true
+
 [sitemap]
   changefreq = "daily"
   priority = 0.7
